# metaspector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml
metaspector/: __init__.py  _exceptions.py  cli.py  inspector.py
metaspector/format_handlers/: __init__.py  base.py
metaspector/format_handlers/flac/: __init__.py  flac.py  flac_boxes.py  flac_utils.py
metaspector/format_handlers/mp3/: __init__.py  mp3.py  mp3_boxes.py  mp3_utils.py
metaspector/format_handlers/mp4/: __init__.py  mp4.py  mp4_bitstream_parser.py  mp4_boxes.py  mp4_utils.py
metaspector/matrices/: __init__.py  language_matrix.py  rating_matrix.py
src/metaspector/: __init__.py  cli.py  inspector.py  parsers.py
src/metaspector/format_handlers/flac/: flac.py  flac_boxes.py  flac_utils.py
src/metaspector/format_handlers/mp3/: mp3_boxes.py  mp3_utils.py
src/metaspector/format_handlers/mp4/: mp4.py  mp4_bitstream_parser.py  mp4_boxes.py  mp4_utils.py
src/metaspector/matrices/: rating_matrix.py
